# living-area-mapper

./: .gitignore  README.md  postal_area_basics_query.json  pyproject.toml
data-extraction/: pyproject.toml
data-extraction/src/statfin-data-extractor/: __main__.py  api_calls.py
data-extraction/src/statfin-data-extractor/queries/: apartment_price_municipality_query.json  apartment_price_query.json  postal_area_basics_query.json
data-extraction/src/statsfin-data-extractor/: __main__.py  api_calls.py  config.toml
data-extraction/src/statsfin-data-extractor/queries/: apartment_price_query.json
feature-engineering/: pyproject.toml
feature-engineering/src/create-features/: feature_processing.py
feature-engineering/src/postal-area-features/: __main__.py  config.toml
predictive-inferences/: pyproject.toml
predictive-inferences/src/living-area-mappings/: __main__.py  config.toml
predictive-inferences/src/postal-area-mappings/: __main__.py
src/create-features/: __main__.py  feature_processing.py
src/extract-statsfin-data/: __main__.py  api_calls.py
src/extract-statsfin-data/queries/: apartment_price_municipality_query.json  postal_area_basics_query.json  postal_codes_query.json
