[tool.poetry]
name = "living-area-mapper"
version = "0.1.0"
description = "The application finds similar postal code areas from the 6 largest municipalities in Finland."
authors = ["shiftleino <shiftleino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
requests = "^2.31.0"
pandas = "^2.1.1"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
